gccida/c3/mark_set_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2962:54: error: must use 'enum' tag to refer to type 'rtx_code'
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                     ^
                                                     enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2979:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2982:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2982:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2985:4: error: expected ';' after expression
rtx mem_set_list; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2985:5: error: use of undeclared identifier 'mem_set_list'; did you mean 'reg_set_last'?
rtx mem_set_list; // rbx 
    ^~~~~~~~~~~~
    reg_set_last
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/rtl.h:1485:12: note: 'reg_set_last' declared here
extern rtx reg_set_last                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2986:4: error: expected ';' after expression
rtx v30; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2986:5: error: use of undeclared identifier 'v30'
rtx v30; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2988:6: error: use of undeclared identifier 'p_mem_set_list'
rtx *p_mem_set_list; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2990:6: error: use of undeclared identifier 'v34'
rtx *v34; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2991:4: error: expected ';' after expression
rtx v35; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2991:5: error: use of undeclared identifier 'v35'
rtx v35; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2993:4: error: expected ';' after expression
rtx v37; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2993:5: error: use of undeclared identifier 'v37'
rtx v37; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2995:6: error: use of undeclared identifier 'v39'
rtx *v39; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2998:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2998:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2999:4: error: expected ';' after expression
rtx v43; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/flow.c:2999:5: error: use of undeclared identifier 'v43'
rtx v43; // r14 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_set_1/src/obj/flow.o] Error 1
